Implement arrow bridge overlapping dropout and reason2 sections

--- a/index.html
+++ b/index.html
@@ -699,15 +699,15 @@
         />
       </div>
     </section>
-    <!-- dropoutとreason2の間に赤矢印を独立配置 -->
-    <div class="dropout__arrows-bridge">
-      <div class="dropout__arrows">
-        <span class="dropout__arrow">&#8595;</span>
-        <span class="dropout__arrow">&#8595;</span>
-        <span class="dropout__arrow">&#8595;</span>
-      </div>
-    </div>
     <section class="reason2">
+      <!-- 矢印をreason2内に配置してdropoutとreason2にまたがらせる -->
+      <div class="reason2__arrows-bridge">
+        <div class="reason2__arrows">
+          <span class="reason2__arrow">&#8595;</span>
+          <span class="reason2__arrow">&#8595;</span>
+          <span class="reason2__arrow">&#8595;</span>
+        </div>
+      </div>
       <div class="reason2__item angle-left">
         生徒のレベルに合わせた授業だから、<br />パソコン初心者でも心配なし！
       </div>
