レスポンシブデザイン調整と細部修正

--- a/index.html
+++ b/index.html
@@ -490,7 +490,6 @@
           <img src="logo.jpg" alt="BeEngineer ロゴ" class="header__logo-img" />
         </div>
         <div class="header__info">
-          <div class="header__catch">周りの同級生と差をつけろ！</div>
           <div class="header__subtitle">
             中高生のための実践的プログラミング教室
           </div>
@@ -575,6 +574,9 @@
       <div class="sns__inner">
         <h2 class="sns__subtitle">SNS開発</h2>
         <div class="sns__lead">使う側から作る側へ。</div>
+        <p class="sns__motion-text">
+          BeEngineerでは2年目のカリキュラムで<br />SNS開発ができるようになります。
+        </p>
         <img src="sns.svg" alt="SNSのサンプル" class="sns__img" />
       </div>
     </section>
@@ -674,7 +676,6 @@
         preserveAspectRatio="none"
       >
         <polygon points="0,0 1920,30 1920,40 0,40" fill="#252A41" />
-        <line x1="0" y1="4" x2="1920" y2="34" stroke="#fff" stroke-width="8" />
       </svg>
     </div>
     <section class="dropout">
