--- a/index.html
+++ b/index.html
@@ -1271,5 +1271,38 @@
         });
       });
     </script>
+
+    <!-- フッター -->
+    <footer class="footer">
+      <div class="footer__container">
+        <div class="footer__content">
+          <!-- ナビゲーション -->
+          <div class="footer__nav">
+            <h3 class="footer__nav-title">ナビゲーション</h3>
+            <ul class="footer__nav-list">
+              <li><a href="#hero" class="footer__nav-link">トップ</a></li>
+              <li><a href="#about" class="footer__nav-link">BeEngineerとは</a></li>
+              <li><a href="#reason" class="footer__nav-link">選ばれる理由</a></li>
+              <li><a href="#skills" class="footer__nav-link">身につくスキル</a></li>
+              <li><a href="#teachers" class="footer__nav-link">講師紹介</a></li>
+              <li><a href="#voices" class="footer__nav-link">受講生の声</a></li>
+              <li><a href="#contact" class="footer__nav-link">無料体験申し込み</a></li>
+              <li><a href="#" class="footer__nav-link">運営会社</a></li>
+            </ul>
+          </div>
+
+          <!-- リンク・規約 -->
+          <div class="footer__links">
+            <h3 class="footer__links-title">リンク・規約</h3>
+            <ul class="footer__links-list">
+              <li><a href="#" class="footer__links-link">プライバシーポリシー</a></li>
+              <li><a href="#" class="footer__links-link">利用規約</a></li>
+              <li><a href="#" class="footer__links-link">特定商取引法に基づく表記</a></li>
+              <li><a href="#" class="footer__links-link">お問い合わせ</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
